src/test/ui/higher-rank-trait-bounds/normalize-under-binder/issue-89118.stderr
warning: the where-clause bound `for<'a> Ctx<()>: BufferUdpStateContext<&'a ()>` is impossible to satisfy
  --> $DIR/issue-89118.rs:9:5
   |
LL | / trait StackContext
LL | | where
LL | |     Ctx<()>: for<'a> BufferUdpStateContext<&'a ()>,
   | |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | |
LL | | {
LL | |     type Dispatcher;
LL | | }
   | |_- this item cannot be referenced without causing an error
   |
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to allow it

error[E0277]: the trait bound `for<'a> &'a (): BufferMut` is not satisfied
  --> $DIR/issue-89118.rs:20:8
   |
LL |     C: StackContext,
   |        ^^^^^^^^^^^^ the trait `for<'a> BufferMut` is not implemented for `&'a ()`
   |
note: required because of the requirements on the impl of `for<'a> BufferUdpStateContext<&'a ()>` for `Ctx<()>`
  --> $DIR/issue-89118.rs:5:23
   |
LL | impl<B: BufferMut, C> BufferUdpStateContext<B> for C {}
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^     ^
note: required by a bound in `StackContext`
  --> $DIR/issue-89118.rs:9:14
   |
LL | trait StackContext
   |       ------------ required by a bound in this
LL | where
LL |     Ctx<()>: for<'a> BufferUdpStateContext<&'a ()>,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `StackContext`

warning: the where-clause bound `for<'a> Ctx<()>: BufferUdpStateContext<&'a ()>` is impossible to satisfy
  --> $DIR/issue-89118.rs:29:5
   |
LL | / struct EthernetWorker<C>(C)
LL | | where
LL | |     Ctx<()>: for<'a> BufferUdpStateContext<&'a ()>;
   | |_____^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- this item cannot be referenced without causing an error
   |
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to allow it

error[E0277]: the trait bound `for<'a> &'a (): BufferMut` is not satisfied
  --> $DIR/issue-89118.rs:31:9
   |
LL | impl<C> EthernetWorker<C> {}
   |         ^^^^^^^^^^^^^^^^^ the trait `for<'a> BufferMut` is not implemented for `&'a ()`
   |
note: required because of the requirements on the impl of `for<'a> BufferUdpStateContext<&'a ()>` for `Ctx<()>`
  --> $DIR/issue-89118.rs:5:23
   |
LL | impl<B: BufferMut, C> BufferUdpStateContext<B> for C {}
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^     ^
note: required by a bound in `EthernetWorker`
  --> $DIR/issue-89118.rs:29:14
   |
LL | struct EthernetWorker<C>(C)
   |        -------------- required by a bound in this
LL | where
LL |     Ctx<()>: for<'a> BufferUdpStateContext<&'a ()>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EthernetWorker`

error[E0277]: the trait bound `for<'a> &'a (): BufferMut` is not satisfied
  --> $DIR/issue-89118.rs:23:20
   |
LL |     type Handler = Ctx<C::Dispatcher>;
   |                    ^^^^^^^^^^^^^^^^^^ the trait `for<'a> BufferMut` is not implemented for `&'a ()`
   |
note: required because of the requirements on the impl of `for<'a> BufferUdpStateContext<&'a ()>` for `Ctx<()>`
  --> $DIR/issue-89118.rs:5:23
   |
LL | impl<B: BufferMut, C> BufferUdpStateContext<B> for C {}
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^     ^
note: required by a bound in `StackContext`
  --> $DIR/issue-89118.rs:9:14
   |
LL | trait StackContext
   |       ------------ required by a bound in this
LL | where
LL |     Ctx<()>: for<'a> BufferUdpStateContext<&'a ()>,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `StackContext`

error: aborting due to 3 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0277`.
